# trivial-sqs-worker

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: compile.yml
src/: main.rs
